update readme with demo

--- a/README.me
+++ b/README.me
@@ -1,10 +1,8 @@
 Listing of all my projects in a table format for easier tracking.
 
+[See a demo http://thekeesh.com/projectlist/] (http://thekeesh.com/projectlist/)
+
 Ideas TODO:
-* style page with bootstrap
-* deploy on thekeesh.com
-* hold data in JS dictionary
-* build HTML using JS
 * allow sorting with JS
 * have projects create a project.json file that makes it possible to generate this file
 
