--- a/README.me
+++ b/README.me
@@ -7,7 +7,13 @@ How to add a project:
 1. Open data.js file and add a json with the required fields.
 2. Make sure to add a title, description.
 3. To add an image, make sure it is wider than tall, approx 700x300px and add
-it to the images/ folder. 
+it to the images/ folder.
 4. Commit and deploy with
 
 git push origin master; git push web master
+
+
+todo:
+- add stanford flipside puzzles
+- add laneys website
+- review namecheap websites
